--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.15",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
+    "@mui/styled-engine-sc": "^6.0.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "font-awesome": "^4.7.0",
     "postcss": "^8.4.45",
+    "primereact": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-sticky-el": "^2.1.1",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.0",
     "tailwindcss": "^3.4.10"
   },
