--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "font-awesome": "^4.7.0",
+    "jspdf": "^2.5.1",
     "postcss": "^8.4.45",
     "primereact": "^10.8.2",
     "react": "^18.3.1",
@@ -28,7 +29,8 @@
     "react-sticky-el": "^2.1.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
