--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,3 @@
-# REACT_WEB_API_BASE_URL = "http://localhost:"
-# REACT_WEB_API_BASE_URL = "http://localhost:"
+VITE_SERVER_API_BASE_URL=192.168.10.19:9002
+
+ 
