--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jspdf": "^2.5.1",
     "postcss": "^8.4.45",
     "primereact": "^10.8.2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
