--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.15",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.1.3",
     "@mui/styled-engine-sc": "^6.0.2",
