i module for chartJS

--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@mui/styled-engine-sc": "^6.0.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "dotenv": "^16.4.5",
     "font-awesome": "^4.7.0",
-    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "postcss": "^8.4.45",
     "primereact": "^10.8.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-sticky-el": "^2.1.1",
