--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
+    "dom-to-image": "^2.6.0",
     "dotenv": "^16.4.5",
     "font-awesome": "^4.7.0",
+    "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "postcss": "^8.4.45",
